arreglo de slider en landing de cinema y concert

--- a/resources/sass/organisms/_header.scss
+++ b/resources/sass/organisms/_header.scss
@@ -25,3 +25,9 @@ header {
     background-color: $selecred;
     z-index: 9;
 }
+.header-background{
+    background-color: $teal;
+}
+.header-background-blue{
+    background-color:$bright-blue;
+}
