--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -214,10 +214,22 @@
     font-family: $MontserratSemiBold;
     color: $lightbrown;
 }
+.a-text-semibold-orange{
+    font-family: $MontserratSemiBold;
+    color: $orange;
+}
+.a-text-semibold-tomato{
+    font-family: $MontserratSemiBold;
+    color: $selecred;
+}
 
 .a-text-semibold-warmgrey {
     font-family: $MontserratSemiBold;
     color: $warmGrey;
+}
+.a-text-semibold-greyish-brown-two {
+    font-family: $MontserratSemiBold;
+    color: $greyish-brown-two;
 }
 
 .a-text-semibold-warm-grey-three {
