se pintó información de claro cinema

--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -32,18 +32,21 @@
     font-family: $MontserratBlack;
     color: white;
 }
-.a-text-black-Black {
+
+.a-text-black-black {
     font-family: $MontserratBlack;
     color: black;
 }
-.a-text-black-yellow-two{
-    font-family:$MontserratBlack;
-  color: $off-yellow-two;
+
+.a-text-black-yellow-two {
+    font-family: $MontserratBlack;
+    color: $off-yellow-two;
 
 }
-.a-text-black-turquiose{
+
+.a-text-black-turquiose {
     font-family: $MontserratBlack;
-    color:$turquoise-blue;
+    color: $turquoise-blue;
 }
 
 .a-text-bold-light {
@@ -75,6 +78,7 @@
     font-family: $MontserratBold;
     color: $selecred;
 }
+
 .a-text-black-tomato {
     font-family: $MontserratBlack;
     color: $selecred;
@@ -214,11 +218,13 @@
     font-family: $MontserratSemiBold;
     color: $lightbrown;
 }
-.a-text-semibold-orange{
+
+.a-text-semibold-orange {
     font-family: $MontserratSemiBold;
     color: $orange;
 }
-.a-text-semibold-tomato{
+
+.a-text-semibold-tomato {
     font-family: $MontserratSemiBold;
     color: $selecred;
 }
@@ -227,6 +233,7 @@
     font-family: $MontserratSemiBold;
     color: $warmGrey;
 }
+
 .a-text-semibold-greyish-brown-two {
     font-family: $MontserratSemiBold;
     color: $greyish-brown-two;
