--- a/public/css/app.css
+++ b/public/css/app.css
@@ -444,7 +444,7 @@ body {
   color: white;
 }
 
-.a-text-black-Black {
+.a-text-black-black {
   font-family: "Montserrat-Black";
   color: black;
 }
@@ -4430,7 +4430,7 @@ div .bootstrap-select > .dropdown-toggle:focus {
   color: white;
 }
 
-.a-text-black-Black {
+.a-text-black-black {
   font-family: "Montserrat-Black";
   color: black;
 }
@@ -6870,6 +6870,18 @@ iframe {
   height: 100%;
 }
 
+#cinema-promo-container {
+  padding-bottom: 70%;
+}
+
+#cinema-promo-container img {
+  position: absolute;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 @font-face {
   font-family: "Montserrat-Light";
   src: url(/backoffice/public/fonts/Montserrat-Light/Montserrat-Light.eot);
@@ -7020,10 +7032,14 @@ header {
 
 .header-background {
   background-color: #0097a9;
+  height: 100px;
+  z-index: 9;
 }
 
 .header-background-blue {
   background-color: #0068ff;
+  height: 100px;
+  z-index: 9;
 }
 
 @font-face {
