--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -247,6 +247,11 @@
     color: $brownish-grey-three;
 }
 
+.a-text-semibold-black {
+    font-family: $MontserratSemiBold;
+    color: $black;
+}
+
 .a-text-semibold-white {
     font-family: $MontserratSemiBold;
     color: $white;
