--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -434,7 +434,9 @@ iframe {
     width: 90%;
     z-index: 1;
 }
-
+.width-program{
+    width: 120px !important;
+}
 
 #concert-promo-container {
     padding-bottom: 70%;
