--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1452,6 +1452,12 @@ body {
   font-size: 32px;
 }
 
+.banner-text {
+  opacity: 0.7;
+  border-radius: 13px;
+  background-color: #ffffff;
+}
+
 @font-face {
   font-family: "Montserrat-Light";
   src: url(/backoffice/public/fonts/Montserrat-Light/Montserrat-Light.eot);
@@ -5522,6 +5528,12 @@ div .bootstrap-select > .dropdown-toggle:focus {
   background-color: transparent;
   border: 0;
   font-size: 32px;
+}
+
+.banner-text {
+  opacity: 0.7;
+  border-radius: 13px;
+  background-color: #ffffff;
 }
 
 #video-promo-concert {
