--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -1055,3 +1055,9 @@
         font-size: 32px;
     }
 }
+
+.banner-text {
+    opacity: 0.7;
+    border-radius: 13px;
+    background-color: #ffffff;
+}
