--- a/resources/sass/molecules/_lists.scss
+++ b/resources/sass/molecules/_lists.scss
@@ -358,6 +358,26 @@ ul {
         margin-bottom: 16px;
     }
 }
+
+.programming-slider-dots-canal-claro {
+    .slick-dots {
+        position: static;
+        text-align: left;
+        bottom: auto;
+    }
+
+    .presentation {
+        margin-right: 24px;
+    }
+
+    .slick-dots li {
+        height: 37px;
+        width: 37px;
+        margin-right: 16px;
+        margin-bottom: 16px;
+    }
+}
+
 .programming-slider-dots1 {
     .slick-dots {
         position: static;
@@ -376,6 +396,7 @@ ul {
         margin-bottom: 16px;
     }
 }
+
 .carrusel1-slider-dots1 {
     .slick-dots {
         position: static;
@@ -394,6 +415,7 @@ ul {
         margin-bottom: 16px;
     }
 }
+
 .carrusel2-slider-dots1 {
     .slick-dots {
         position: static;
