--- a/resources/sass/organisms/_slider.scss
+++ b/resources/sass/organisms/_slider.scss
@@ -1,11 +1,24 @@
 @import "../base/color";
 
 .synopsis-image-slider,
-.programming-slider {
+.programming-slider,
+.programming-slider-canal-claro {
     width: 1000px !important;
 }
 
 .programming-slider-dots {
+    .slick-dots {
+        .slick-active {
+            background-color: $teal;
+        }
+
+        .slick-active p {
+            color: $white !important;
+        }
+    }
+}
+
+.programming-slider-dots-canal-claro {
     .slick-dots {
         .slick-active {
             background-color: $teal;
@@ -23,17 +36,19 @@
         .slick-active {
             background-color: $teal;
         }
+
         .slick-active::after {
             content: "";
             border-width: 6px;
             border-style: solid;
             border-color: #4a4a4a transparent transparent transparent;
-            position: absolute; 
+            position: absolute;
             left: 36%;
             bottom: -12px;
             transform: rotate(180deg);
-          }
-          .slick-active::before {
+        }
+
+        .slick-active::before {
             content: "";
             border-width: 6px;
             border-style: solid;
@@ -43,8 +58,8 @@
             top: 0;
             -webkit-transform: translate(-50%, 100%);
             transform: translate(-50%, -95%);
-          }
-         
+        }
+
 
         .slick-active p {
             color: $white !important;
@@ -74,12 +89,25 @@
     }
 }
 
+.programming-slider-canal-claro {
+    .slick-slide {
+        height: 342px !important;
+    }
+
+    .slick-slide {
+        div {
+            height: 100% !important;
+        }
+    }
+}
+
 .synopsis-image-slider {
     .slick-dots {
         position: static;
         margin-top: 24px;
         text-align: right;
     }
+
     .slick-slide {
         height: 342px !important;
     }
@@ -123,5 +151,3 @@
     align-items: center;
     justify-content: center;
 }
-
-  
