--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -158,7 +158,10 @@
     font-family: $MontserratMedium;
     color: $repassgray;
 }
-
+.a-text-medium-white {
+    font-family: $MontserratMedium;
+    color: white;
+}
 .a-text-medium-black {
     font-family: $MontserratRegular;
     color: $black;
