--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -398,6 +398,21 @@ iframe {
     border-radius: 12px;
     background-color: $cobait;
 }
+.container-image-synopsis {
+
+    border-radius: 12px;
+    background-color: $black-three;
+}
+.container-image{
+    width: 597px;
+    height: 356px;
+}
+.container-edit-sinopsis{
+    width: 824px;
+    height: 461px;
+    
+}
+
 
 .container-promo-cinema {
 
